kakao custom link

--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -62,7 +62,7 @@
                     font-family: "SCDream";
                     font-weight: 500;
                     color: rgb(141, 87, 85);
-                    focus{
+                    strong{
                         font-weight: 600;
                         color: rgb(110, 23, 23);
                     }
