--- a/src/assets/scss/screens/mobileTypes/lgG.scss
+++ b/src/assets/scss/screens/mobileTypes/lgG.scss
@@ -85,7 +85,7 @@
                         font-size: 16px;  
                         margin-bottom: 13px; 
                         span{
-                            focus{
+                            strong{
                                 font-size: 17px;
                             }
                         }
