--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -8,7 +8,15 @@
         .sharedSNS(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
             .sharedImage
                 img(data-src="//hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
-            .addThis
+            .sharedIcons
                 a(id="kakao-link-btn" href="javascript:sendLink()")
-                    img(data-src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                a(href="#")
+                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                a(href="#")
+                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                a(href="#")
+                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                a(href="#")
+                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
                 //- .addthis_inline_share_toolbox_2pvo
