--- a/src/assets/scss/screens/mobileTypes/ipad.scss
+++ b/src/assets/scss/screens/mobileTypes/ipad.scss
@@ -86,7 +86,7 @@
                         font-size: 26px;  
                         margin-bottom: 18px; 
                         span{
-                            focus{
+                            strong{
                                 font-size: 27px;
                             }
                         }
@@ -184,6 +184,13 @@
                         margin-bottom: 20px;
                         img{
                             height: 58px;
+                        }
+                    }
+                    .sharedIcons{
+                        a{
+                            .snsIcon{
+                                width: 58px;
+                            }
                         }
                     }
                 }
