--- a/src/assets/scss/screens/mobileTypes/iphone4.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone4.scss
@@ -86,7 +86,7 @@
                         font-size: 14px;  
                         margin-bottom: 10px; 
                         span{
-                            focus{
+                            strong{
                                 font-size: 15px;
                             }
                         }
@@ -179,6 +179,13 @@
                     .sharedImage{
                         img{
                             height: 29px;
+                        }
+                    }
+                    .sharedIcons{
+                        a{
+                            .snsIcon{
+                                width: 36px;
+                            }
                         }
                     }
                 }
