--- a/src/assets/scss/screens/mobileTypes/iphone5.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone5.scss
@@ -85,7 +85,7 @@
                         font-size: 15px;  
                         margin-bottom: 10px; 
                         span{
-                            focus{
+                            strong{
                                 font-size: 16px;
                             }
                         }
