--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -9,14 +9,14 @@
             .sharedImage
                 img(data-src="//hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
             .sharedIcons
-                a(id="kakao-link-btn" href="javascript:sendLink()")
+                a(id="kakao-link-btn" href="javascript:sendLink()" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
-                a(href="#")
+                a#facebookBtn(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
-                a(href="#")
+                a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
-                a(href="#")
+                a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
-                a(href="#")
+                a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
                 //- .addthis_inline_share_toolbox_2pvo
