--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -12,7 +12,7 @@
                 a(id="kakao-link-btn" href="javascript:sendLink()" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
                 a#facebookBtn(href="#" ontouchstart="")
-                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/facebook-icon.png")
                 a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
                 a(href="#" ontouchstart="")
