add twitter, sms icon

--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -10,13 +10,13 @@
                 img(data-src="//hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
             .sharedIcons
                 a(id="kakao-link-btn" href="javascript:sendLink()" ontouchstart="")
-                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
                 a#facebookBtn(href="#" ontouchstart="")
-                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/facebook-icon.png")
+                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
                 a(href="#" ontouchstart="")
-                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
                 a(href="#" ontouchstart="")
-                    img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
                 a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
                 //- .addthis_inline_share_toolbox_2pvo
