--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -15,6 +15,7 @@ html(lang="en")
         //- Sharing SNS SDK 
         script(src="//developers.kakao.com/sdk/js/kakao.min.js")
         script(async defer src="https://connect.facebook.net/en_US/sdk.js")
+        script(type="text/javascript" async src="https://platform.twitter.com/widgets.js")
         //- og meta tag
         meta(property="og:type" content="website")
         //- meta(property="og:url" content="https://jeokdanghi-relationship.com/")
