--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -13,7 +13,7 @@
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
                 a#facebookBtn(href="#" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
-                a(href="#" ontouchstart="")
+                a(href="https://twitter.com/intent/tweet?text=instagram.com/blackfish_book/&url=https://cocky-yalow-588613.netlify.app/" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
                 a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
