--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -9,13 +9,13 @@
             .sharedImage
                 img(data-src="//hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
             .sharedIcons
-                a(id="kakao-link-btn" href="javascript:sendLink()" ontouchstart="")
+                a#kakao-link-btn(href="javascript:sendLink()" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
                 a#facebookBtn(href="#" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
                 a(href="https://twitter.com/intent/tweet?text=instagram.com/blackfish_book/&url=https://cocky-yalow-588613.netlify.app/" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
-                a(href="#" ontouchstart="")
+                a#sms-link-btn(ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
                 a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
