--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -11,7 +11,7 @@
             .sharedIcons
                 a#kakao-link-btn(href="javascript:sendLink()" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
-                a#facebookBtn(href="#" ontouchstart="")
+                a#facebookBtn(ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
                 a(href="https://twitter.com/intent/tweet?text=instagram.com/blackfish_book/&url=https://cocky-yalow-588613.netlify.app/" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
