start image size change

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -68,7 +68,7 @@ html(lang="en")
                 FB.ui({
                     display: 'popup',
                     method: 'share',
-                    href: 'https://cocky-yalow-588613.netlify.app/',
+                    href: 'https://jeokdanghi-relationship.com/',
                 }, function(response){});
             }          
         script(src="main.js")
