--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -13,10 +13,9 @@
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
                 a#facebookBtn(ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
-                a(href="https://twitter.com/intent/tweet?text=instagram.com/blackfish_book/&url=https://cocky-yalow-588613.netlify.app/" ontouchstart="")
+                a(href="https://twitter.com/intent/tweet?text=instagram.com/100doci/&url=https://jeokdanghi-relationship.com/" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
                 a#sms-link-btn(ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
                 a(href="#" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
-                //- .addthis_inline_share_toolbox_2pvo
