--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,13 +2,12 @@
 html(lang="en")
     head
         //- 서비스 배포시 Unlock
-        //- script(async src="https://www.googletagmanager.com/gtag/js?id=UA-169195735-1")
+        //- script(async src="https://www.googletagmanager.com/gtag/js?id=UA-169195735-2")
         //- script.
         //-     window.dataLayer = window.dataLayer || [];
         //-     function gtag(){dataLayer.push(arguments);}
         //-     gtag('js', new Date());
-
-        //-     gtag('config', 'UA-169195735-1');
+        //-     gtag('config', 'UA-169195735-2');
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
         meta(name="HandheldFriendly" content="true")
@@ -16,9 +15,10 @@ html(lang="en")
         script(src="//developers.kakao.com/sdk/js/kakao.min.js")
         script(async defer src="https://connect.facebook.net/en_US/sdk.js")
         script(type="text/javascript" async src="https://platform.twitter.com/widgets.js")
+        script(src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js")
         //- og meta tag
         meta(property="og:type" content="website")
-        //- meta(property="og:url" content="https://jeokdanghi-relationship.com/")
+        meta(property="og:url" content="https://jeokdanghi-relationship.com/")
         meta(property="og:image" content="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/kongi.png")
         meta(property="og:title" content="재미로 보는 관계 유형 테스트")
         meta(property="og:description" content="나의 인간 관계 유형은?")
@@ -70,5 +70,14 @@ html(lang="en")
                     method: 'share',
                     href: 'https://jeokdanghi-relationship.com/',
                 }, function(response){});
-            }          
+            }
+            
+            const clipboard = new ClipboardJS('#clipBoardBtn');
+            clipboard.on('success', function(e) {
+                alert("서점링크 복사완료")
+            });
+
+            clipboard.on('error', function(e) {
+                alert("링크 복사 에러")
+            });
         script(src="main.js")
