--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -17,5 +17,6 @@
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
                 a#sms-link-btn(ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
-                a(href="#" ontouchstart="")
+                //- 배포전 수정 예정(18일 예상)
+                a#clipBoardBtn(data-clipboard-text="https://book.naver.com/bookdb/book_detail.nhn?bid=14564271" ontouchstart="")
                     img.snsIcon(data-src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
