--- a/src/views/screens/question5.pug
+++ b/src/views/screens/question5.pug
@@ -26,9 +26,7 @@
                     | 받지 않는다
             .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
-                span 우선 받지만 방 어딘가에 두고
-                    br
-                    | 사용하진 않는다
+                span 우선 받지만 어딘가에 두고 사용하진 않는다
             .button.selectBtn(data-id="4" ontouchstart="")
                 span ④
                 span 구매한 곳으로 가서 다른 상품으로 교환한다
