--- a/src/assets/scss/screens/mobileTypes/iphone4.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone4.scss
@@ -3,6 +3,9 @@
         .resorceLoading{
             font-size: 12px;
         }
+        .swal-text {
+            font-size: 12px;
+        }
         .slider{
             .start{
                 .slide__content{
