--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -5,12 +5,11 @@
                 img.description(data-src="//hbird1005.dothome.co.kr/images/startPage/startBubble.png" alt="")
                 img.main(data-src="//hbird1005.dothome.co.kr/images/startPage/startHuman.png" alt="")
             .title
-                div 재미로보는
+                div 재미로 보는
                 div 관태기 테스트
-                div 나의 관계 유형은?
-        .bookImage
-            //- 샘플이미지
-            img(data-src="//hbird1005.dothome.co.kr/images/startPage/sampleBook.png" alt="")
+                div 나의 인간 관계 유형은?
+        .mainImage
+            img(data-src="//hbird1005.dothome.co.kr/images/startPage/startMain.png" alt="")
         .startBtn
             .button(ontouchstart="")
                 img(data-src="//hbird1005.dothome.co.kr/images/startPage/startBtn.png" alt="")
