--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,6 +7,9 @@
             .preventHorizonMode{
                 display: none;
             }
+            // .desktopScreen{
+            //     display: none;
+            // }
         }
     }
 }
@@ -23,7 +26,7 @@ body,html {
     user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     .swal-modal {
-        background-color: rgba(255, 255, 255, 0.788);
+        background-color: rgba(255, 255, 255, 0.877);
         border: none;
         border-radius: 20px;
         width: fit-content;
