--- a/src/assets/scss/screens/mobileTypes/iphone4.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone4.scss
@@ -12,32 +12,29 @@
                     .content__row{
                         .topImage{
                             img.main{
-                                height: 95px;
+                                height: 90px;
                             }
                         }
                         .title{
                             div:nth-child(1){
-                                font-size: 20px;
+                                font-size: 18px;
                             }
                             div:nth-child(2){
-                                font-size: 24px;
+                                font-size: 22px;
                             }
                             div:nth-child(3){
-                                padding: 5px 7px;
-                                font-size: 12px;
+                                padding: 4px 3px;
+                                font-size: 11px;
                             }
                         }
                     }
-                    .bookImage{
-                        margin: 15px;
-                        img{
-                            height: 140px;
-                        }
+                    .mainImage{
+                        margin-top: 5px;
                     }
-                    .startBtn{
-                        .button{
+                    .startBtn {
+                        .button {
                             img:nth-child(1){
-                                height: 67px;
+                                height: 70px;
                             }
                         }
                     }
@@ -86,45 +83,46 @@
             .slide__content{
                 .content__row{
                     .questionTitle{
-                        font-size: 14px;  
-                        margin-bottom: 10px; 
+                        font-size: 11px;  
+                        margin-bottom: 5px; 
+                        line-height: 1.3;
                         span{
                             strong{
-                                font-size: 15px;
+                                font-size: 12px;
                             }
                         }
                     }
                     .mainTitle{
+                        line-height: 1.3;
                         span{
-                            font-size: 15px;
+                            font-size: 13px;
                         }
                     }
                 }
                 .bookImage{
-                    margin: 10px 0;
                     img{
-                        height: 150px;
+                        width: 70%;
                     }
                 }
                 .loadingComment{
                     .comment{
                         span{
-                            font-size: 12px;
+                            font-size: 10px;
                         }
                     }
                     .loadingAnimation{
                         span{
-                            font-size: 12px;
+                            font-size: 9px;
                         }
                         .dot{
-                            width: 3px;
-                            height: 3px;
+                            width: 2px;
+                            height: 2px;
                         }
                     }
                     .resultBtn{
                         .button{
                             img{
-                                height: 80px;
+                                height: 50px;
                             }
                         }
                     }
