--- a/src/assets/scss/screens/mobileTypes/iphone5.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone5.scss
@@ -12,30 +12,27 @@
                     .content__row{
                         .topImage{
                             img.main{
-                                height: 110px;
+                                height: 105px;
                             }
                         }
                         .title{
                             div:nth-child(1){
-                                font-size: 22px;
+                                font-size: 21px;
                             }
                             div:nth-child(2){
-                                font-size: 26px;
+                                font-size: 25px;
                             }
                             div:nth-child(3){
-                                padding: 5px 7px;
-                                font-size: 13px;
+                                padding: 4px 5px;
+                                font-size: 12px;
                             }
                         }
                     }
-                    .bookImage{
-                        margin: 15px;
-                        img{
-                            height: 180px;
-                        }
+                    .mainImage{
+                        margin-top: 7px;
                     }
-                    .startBtn{
-                        .button{
+                    .startBtn {
+                        .button {
                             img:nth-child(1){
                                 height: 75px;
                             }
@@ -85,35 +82,29 @@
             .slide__content{
                 .content__row{
                     .questionTitle{
-                        font-size: 15px;  
+                        font-size: 14px;  
                         margin-bottom: 10px; 
                         span{
                             strong{
-                                font-size: 16px;
+                                font-size: 15px;
                             }
                         }
                     }
                     .mainTitle{
                         span{
-                            font-size: 16px;
+                            font-size: 15px;
                         }
-                    }
-                }
-                .bookImage{
-                    margin: 15px 0;
-                    img{
-                        height: 140px;
                     }
                 }
                 .loadingComment{
                     .comment{
                         span{
-                            font-size: 13px;
+                            font-size: 11px;
                         }
                     }
                     .loadingAnimation{
                         span{
-                            font-size: 11px;
+                            font-size: 10px;
                         }
                         .dot{
                             width: 3px;
@@ -123,7 +114,7 @@
                     .resultBtn{
                         .button{
                             img{
-                                height: 90px;
+                                height: 60px;
                             }
                         }
                     }
