--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -9,6 +9,7 @@
         animation: $nextElSlide
     }
     .slide__content{
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -57,6 +58,7 @@
             margin-top: 5%;
             display: flex;
             justify-content: center;
+            width: 100%;
             img{
                 width: 100%;
             }
@@ -65,17 +67,18 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            .comment{
-                text-align: center;
-                line-height: 1.2;
-                span{
-                    font-size: 13px;
-                    font-family: "SCDream";
-                    font-weight: 500;
-                    color: rgb(141, 87, 85);
-                    strong{
-                        font-weight: 600;
-                        color: rgb(110, 23, 23);
+            .resultBtn{
+                width: fit-content;
+                opacity: 0;
+                pointer-events: none;
+                .button{
+                    img{
+                        height: 80px;
+                        animation: ready 1s linear infinite;
+                    }
+                    -webkit-tap-highlight-color: transparent;
+                    &:active{
+                        -webkit-tap-highlight-color: transparent;
                     }
                 }
             }
@@ -115,18 +118,17 @@
                     animation: dot 1.5s linear infinite 0.85s;
                 }
             }
-            .resultBtn{
-                width: fit-content;
-                opacity: 0;
-                pointer-events: none;
-                .button{
-                    img{
-                        height: 80px;
-                        animation: ready 1s linear infinite;
-                    }
-                    -webkit-tap-highlight-color: transparent;
-                    &:active{
-                        -webkit-tap-highlight-color: transparent;
+            .comment{
+                text-align: center;
+                line-height: 1.2;
+                span{
+                    font-size: 13px;
+                    font-family: "SCDream";
+                    font-weight: 500;
+                    color: rgb(141, 87, 85);
+                    strong{
+                        font-weight: 600;
+                        color: rgb(110, 23, 23);
                     }
                 }
             }
