--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -61,6 +61,7 @@
             width: 100%;
             img{
                 width: 100%;
+                height: auto;
             }
         }
         .loadingComment{
