--- a/src/assets/scss/screens/mobileTypes/PC.scss
+++ b/src/assets/scss/screens/mobileTypes/PC.scss
@@ -5,9 +5,13 @@
             .preventHorizonMode{
                 display: flex;
             }
-            // .desktopScreen{
-            //     display: none;
-            // }
+        }
+    }
+}
+@media (min-width: 700px){
+    html{
+        body{
+            display: none;
         }
     }
 }
