--- a/src/assets/scss/screens/mobileTypes/lgG.scss
+++ b/src/assets/scss/screens/mobileTypes/lgG.scss
@@ -74,6 +74,17 @@
         }
         .loading{
             .slide__content{
+                .loadingCloud{
+                    &:nth-child(1){
+                        height: 70px;
+                    }
+                    &:nth-child(2){
+                        height: 65px;
+                    }
+                    &:nth-child(3){
+                        height: 50px;
+                    }
+                }
                 .content__row{
                     .questionTitle{
                         font-size: 14px;  
@@ -88,6 +99,11 @@
                         span{
                             font-size: 15px;
                         }
+                    }
+                }
+                .bookImage{
+                    img{
+                        height: 280px;
                     }
                 }
                 .loadingComment{
