--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -41,18 +41,18 @@ html(lang="en")
         //-         include screens/desktop
         main
             #jsSlider.slider
-                include screens/start
-                include screens/question1
-                include screens/question2
-                include screens/question3
-                include screens/question4
-                include screens/question5
-                include screens/question6
-                include screens/question7
-                include screens/question8
-                include screens/question9
-                include screens/question10
-                include screens/question11
+                //- include screens/start
+                //- include screens/question1
+                //- include screens/question2
+                //- include screens/question3
+                //- include screens/question4
+                //- include screens/question5
+                //- include screens/question6
+                //- include screens/question7
+                //- include screens/question8
+                //- include screens/question9
+                //- include screens/question10
+                //- include screens/question11
                 include screens/loading
                 include screens/result
         script(type="text/javascript").
