--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -1,5 +1,8 @@
 .slide.loading(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
+        img.loadingCloud(data-src="//hbird1005.dothome.co.kr/images/resultLoading/loadingCloud1.png" alt="")
+        img.loadingCloud(data-src="//hbird1005.dothome.co.kr/images/resultLoading/loadingCloud2.png" alt="")
+        img.loadingCloud(data-src="//hbird1005.dothome.co.kr/images/resultLoading/loadingCloud3.png" alt="")
         .content__row
             .questionTitle
                 span 외롭지도, 피곤하지도 않은
