--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -14,6 +14,27 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        .loadingCloud{
+            position: absolute;
+            &:nth-child(1){
+                left: 0;
+                top: 49%;
+                height: 80px;
+                animation: $floating 2s;
+            }
+            &:nth-child(2){
+                right: 0;
+                top: 32%;
+                height: 75px;
+                animation: $floating 0.5s;
+            }
+            &:nth-child(3){
+                right: 0;
+                top: 61%;
+                height: 55px;
+                animation: $floating 1s;
+            }
+        }
         .content__row{
             display: flex;
             flex-direction: column;
@@ -56,12 +77,11 @@
         }
         .bookImage{
             margin-top: 5%;
+            margin-left: 2%;
             display: flex;
             justify-content: center;
-            width: 100%;
             img{
-                width: 100%;
-                height: auto;
+                height: 320px;
             }
         }
         .loadingComment{
