--- a/src/assets/scss/screens/mobileTypes/iphone7.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone7.scss
@@ -74,6 +74,17 @@
         }
         .loading{
             .slide__content{
+                .loadingCloud{
+                    &:nth-child(1){
+                        height: 70px;
+                    }
+                    &:nth-child(2){
+                        height: 67px;
+                    }
+                    &:nth-child(3){
+                        height: 50px;
+                    }
+                }
                 .content__row{
                     .questionTitle{
                         font-size: 15px;  
@@ -88,6 +99,11 @@
                         span{
                             font-size: 16px;
                         }
+                    }
+                }
+                .bookImage{
+                    img{
+                        height: 290px;
                     }
                 }
                 .loadingComment{
